2000-02-11  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.h: Removed some arguments from the .h that
	will never be implemented.

2000-02-10  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/data-wrapper-repository.c (data_wrapper_repository_init): 
	default the text/* mime types to CamelSimpleDataWrapper so
	that Michael can use get_stream. 

2000-02-10  NotZed  <notzed@zedzone.helixcode.com>

	* camel/camel-simple-data-wrapper-stream.h: The superclass is
	actually a seekable stream, not just a stream.

2000-02-10  bertrand  <Bertrand.Guiheneuf@aful.org>

	* tests/Makefile.am (THREAD_RELATED_TESTS): don't 
	build thread related tests if evolution has been
	compiled with no thread support.

	* configure.in (have_pthread): allow user to enable/disable
	thread support at configure time
	(EXTRA_GNOME_CFLAGS): 
	(EXTRA_GNOME_LIBS): thread support is directly 
	included in this variable if enabled. No more
	EXTRA_GNOME_CFLAGS_THREADS
	Other special support should be added in 
	EXTRA_GNOME_LIBS and EXTRA_GNOME_CFLAGS
	instead of redefining a new variable 
	each time we want to add a new lib. 
	(bonobo, ....)

	* camel/camel.c (camel_init): only try to initialize threads if
	we enabled threads support. 

	* tests/ui-tests/Makefile.am (message_browser_LDADD): use
	EXTRA_GNOME_LIBS

	* configure.in (have_pthread): remove HAVE_PTHREADS
	variable. Define ENABLE_THREADS instead.

	* camel/Makefile.am: use ENABLE_THREADS not HAVE_PTHREADS
	to test if we build thread relateed code. 

	* tests/Makefile.am: use EXTRA_GNOME_LIBS, 
	not EXTRA_GNOME_LIBS_THREADS

2000-02-10  NotZed  <notzed@zedzone.helixcode.com>

	* camel/hash-table-utils.c (g_strcase_hash): Removed a bizarre
	comparison construct for converting case.

2000-02-09  NotZed  <notzed@zedzone.helixcode.com>

	* camel/data-wrapper-repository.c (data_wrapper_repository_init):
	Uses case-insensitive compares.

	* camel/gmime-content-field.c (gmime_content_field_new): Uses