@@ -1,5 +1,10 @@
 2000-02-11  Christopher James Lahey  <clahey@helixcode.com>
 
+	* widgets/e-text/e-text.c (e_text_event): Made a click on a text
+	widget set the cursor properly.
+
+2000-02-11  Christopher James Lahey  <clahey@helixcode.com>
+
 	* widgets/e-text/e-text.h: Removed some arguments from the .h that
 	will never be implemented.
 
